2-exposing-workloads/ingress.yaml
# An Ingress routing localhost -> the `web-app` Service (TASK 4). Fill in the TODOs.
# On Rancher Desktop / k3d the class is "traefik"; on kind with ingress-nginx use "nginx".
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-app
spec:
  ingressClassName: # TODO: which ingress controller should handle this? (Rancher Desktop / k3d uses "traefik"; Docker Desktop / kind uses "nginx".).
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: # TODO: name + port of the Service to route to (see service.yaml)
                port:
                  number: # TODO: Which port does the Service (not the Pod) expose?
